fix swagger problems
